testsuite/tests/properties/invalid_call/field/test.lkt
from common import FooNode

class BarNode: FooNode {
    v: LogicVar

    @ignored fun p(): Array[LogicVar] = [node.v()]
}
